--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 ME</a>
         </div>
         <div class="half-width">
-            <img src="images/Light Green Bulb Children & Kids Logo (1).png" alt="pic1">
+            <img src="./Images/bannar1.png" alt="pic1">
         </div>
     </section>
 </body>
