--- a/index.html
+++ b/index.html
@@ -5,32 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Parker Website</title>
+    <title>Azhar Rahul's Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Arvo&family=Cormorant+Garamond:wght@700&family=Gentium+Plus:wght@700&family=IBM+Plex+Serif:wght@700&family=Playfair+Display:wght@900&family=Poppins&family=Tai+Heritage+Pro:wght@700&family=Vollkorn:wght@600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <section class="top-bannar">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Azhar Rahul's</span> World!</h1>
+            <h1><span>Azhar Rahul's</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings,
-                and stopping trains. But nobody pays me a dime for that work.
-                That's why I am learning and mastering web development.
-                I will not stop until I become the Web Development Hero.</p>
-            <a class="link-button1" target="_blank" href="https://www.linkedin.com/in/freelancerazharrahul/"> HIRE
+            <p>
+                Web development is the work involved in developing a website for the Internet (World Wide Web) or an
+                intranet (a private network).
+                Web development can range from developing a simple single static page of plain text to complex web
+                applications,
+                electronic businesses, and social network services.
+
+            </p>
+            <a class="link-button1" href="https://www.linkedin.com/in/freelancerazharrahul/" target="_blank"> HIRE
                 ME</a>
         </div>
-        <div class="half-width">
-            <img src="./Images/bannar1.png" alt="pic1">
+        <div class="half-width2">
+            <img src="Images/me1.png" alt="Azhar photo">
         </div>
     </section>
+    <section class="middle">
+        <div class="middle1">
+            <img src="Images/mmm.png" alt="Azhar vai khoma 2">
+        </div>
+        <div class="middle2">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer </h3>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.I already learned
+                the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple
+                website. My goal is to build 3 websites and learn advanced topics.I already learned the basic HTML and
+                CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is
+                to build 3 websites and learn advanced topics.I already learned the basic HTML and CSS. I can build any
+                simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites
+                and learn advanced topics.
+            </p>
+            <a class="link-button22" target="_blank" href="Resume/Freelancer Azhar Rahul.Resume.png" download>DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+    <section>
+        <div class="half-width" id="full-stack">
+            <h1>Experiences</h1>
+        </div>
+    </section>
+    <section class="experience-area">
+        <div>
+            <img src="Images/exp-bg.png" alt="bg">
+        </div>
+        <div class="notun-mama">
+            <h1>Full Stack Web Developer</h1>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p>
+                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </p>
+        </div>
+        <div class="half-width2" id="baby-web">
+            <h2>Baby Web Developer</h2>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+    </section>
+    <footer>
+        <pre>© This site is Developed By Azhar Rahul 2022 </pre>
+    </footer>
 </body>
 
 </html>
